--- a/IELTS/index.html
+++ b/IELTS/index.html
@@ -82,17 +82,15 @@
 </head>
 <body>
 
-    <header>LỚP HỌC TIẾNG ANH VUIVE</header>
+    <header>LỚP HỌC TIẾNG ANH CUA VUI</header>
 
     <div class="container">
         <a href="MM_Topic.html" class="card" target="_blank">
             <h2>Sơ đồ tư duy Topic</h2>
-            <p>Xem sơ đồ tư duy phân tích topic, hỗ trợ nắm ý chính nhanh chóng.</p>
         </a>
 
         <a href="MM_Writing.html" class="card" target="_blank">
             <h2>Hướng dẫn Writing</h2>
-            <p>Chi tiết cách lên ý tưởng cho từng dạng bài viết, giúp viết hiệu quả hơn.</p>
         </a>
     </div>
 
