--- a/IELTS/index.html
+++ b/IELTS/index.html
@@ -81,16 +81,16 @@
     </style>
 </head>
 <body>
-
     <header>LỚP HỌC TIẾNG ANH CUA VUI</header>
-
     <div class="container">
         <a href="MM_Topic.html" class="card" target="_blank">
             <h2>Sơ đồ tư duy Topic</h2>
         </a>
-
         <a href="MM_Writing.html" class="card" target="_blank">
             <h2>Hướng dẫn Writing</h2>
+        </a>
+        <a href="MM_Topic.html" class="card" target="_blank">
+            <h2>GRAM</h2>
         </a>
     </div>
 
